public: Fix word break in URL
...and adjust logic in determinePathTrimLength function.

--- a/public/styles/components/Search.scss
+++ b/public/styles/components/Search.scss
@@ -52,6 +52,11 @@ $gutter: 0.6rem;
 		opacity: 0.8;
 		margin-bottom: $gutter;
 		color: var(--secondary);
+
+		& span {
+			white-space: nowrap;
+			word-break: keep-all;
+		}
 	}
 
 	& .description {
